# cppbackend

./: .gitignore
sprint1/problems/async_server/solution/src/: http_server.cpp  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  hotdog.h  ingredients.h  main.cpp
sprint1/problems/final_task/solution/: Dockerfile
sprint1/problems/final_task/solution/src/: http_server.h  json_loader.cpp  request_handler.h
sprint1/problems/map_json/solution/src/: main.cpp  request_handler.h
sprint1/problems/radio/solution/src/: main.cpp
sprint1/problems/restaurant_multi_threaded/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/solution/src/: main.cpp
sprint1/problems/sum/solution/: CMakeLists.txt  main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/join_game/solution/: Dockerfile
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/server_logging/solution/: CMakeLists.txt
sprint2/problems/time_control/solution/: CMakeLists.txt
sprint3/problems/ammo/: ammo.txt
sprint3/problems/ammo/solution/: ammo.stpd  ammo.stpd_si.json  load.yaml
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gen_objects/solution/: CMakeLists.txt
sprint3/problems/instrumentation/solution/: event2dot
sprint3/problems/load/solution/: ammo.txt
sprint3/problems/scores/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/src/: extra_data.cpp
sprint3/problems/static_lib/solution/tests/: loot_generator_tests.cpp  model-tests.cpp
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/: README.md
sprint4/problems/db_of_books/solution/: CMakeLists.txt  conanfile.txt  main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  README.md
sprint4/problems/leave_game/solution/src/: app.cpp  app.h  extra_data.h  infrastructure.cpp  infrastructure.h  json_loader.cpp  main.cpp  model.cpp  model.h  model_serialization.cpp  model_serialization.h  postgres.cpp  postgres.h  request_handler.cpp  request_handler.h  tagged_uuid.cpp  tagged_uuid.h
sprint4/problems/leave_game/solution/tests/: model-tests.cpp  state-serialization-tests.cpp
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile
(+122 files in other folders)
